add Prisma generate to build process for Vercel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "predev": "node scripts/check-db.js",
     "dev": "next dev",
     "dev:watch": "nodemon --watch .env --watch .env.local --signal SIGTERM --exec 'npm run dev'",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint",
     "db:migrate": "prisma migrate deploy",
